<resources>
    <string name="app_name">ManjilKoju</string>
    <string name="contactSubTitle">I\'ll be glad to answer your question!</string>
    <string name="contactTitle">CONTACT ME</string>
    <string name="hintName">Name</string>
    <string name="hintEmail">Email address</string>
    <string name="hintPhoneNumber">Phone number</string>
    <string name="hintMessage">Your message</string>
    <string name="btSendMessageLabel">Send Message</string>
    <string name="myNumber">+977 9808255566</string>
    <string name="myEmail">manjilkoju09@gmail.com</string>
    <string name="myJavaSkills">vvv</string>
    <string name="myJavaSkill">I have been learning and using Java programing\n language for over 2 years and I have high\n confidence in my skills regarding this language.</string>
    <string name="java">Java</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myName">Manjil Koju.</string>
    <string name="start">START</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="introTextTop">Hey there! I\'m</string>
    <string name="introTextBottom">Welcome to my Portfolio App. In this app I will share with you all the basic information about me as well as my educational qualifications and experiences till present.</string>
    <string name="educationalBackground">Educational Background</string>
    <string name="see">SEE</string>
    <string name="seeAcademy">Glad Stone Academy(GSA)</string>
    <string name="seeDate">September 2018</string>
    <string name="slc">SLC</string>
    <string name="slcAcademy">Khwopa Secondary School(KSS)</string>
    <string name="slcDate">September 2020</string>
    <string name="currentStatus">Current Status</string>
    <string name="currentSubject">BSc (Hons) Mobile Application Development</string>
    <string name="currentCollege">Islington Colleve</string>
    <string name="currentYear">2nd year (Currently)</string>
    <string name="currentCollegeAddress">Kamal Marg, Kamalpokhari</string>
    <string name="myHobbies">My Hobbies</string>
    <string name="programmingSkills">Programming Skills</string>
    <string name="softSkills">Soft Skills</string>
    <string name="sql">SQL(Structured Query Language)</string>
    <string name="python">Python</string>
    <string name="myPythonSkill">Python is another programing language that I\n am fluent in. I can easily perform reading from\n and writing into files using this language.</string>
    <string name="mySqlSkill">SQL is an international standard language that \nwe use for interacting with a relational database.\nThe sql skills i have gained include accessing,\nupdating and inserting data efficiently.</string>
    <string name="teamwork">Teamwork</string>
    <string name="problemSolving">Problem Solving Skill</string>
    <string name="myTeamSkill">Teamwork skill is the ability to achieve a common\n goal and tackle the challenges by cooperating\n with others</string>
    <string name="myProblemSolveSkill">Problem solving is the process of identifying \nthe problems and then implementing the best\n possible solution to tackle the problem.</string>
    <string name="sketching">Sketching</string>
    <string name="coding">Coding</string>
    <string name="reading">Reading</string>
    <string name="readingHobby">Reading is one of the activities that I do in my leisure time. I mostly read online books of genre Sci-Fi and action.</string>
    <string name="codingHobby">Coding is also something I enjoy doing in my free time. Most of the times I solve random coding problems found in the Internet.</string>
    <string name="sketchHobby">Sketching is another one of my hobbies. I mostly sketch during the weekends and I randomly start drawing characters from a video game or an anime.</string>
    <string name="aboutApp">About App</string>
    <string name="sliderDesc1">This app is a Portfolio App where you can find the basic information about me and my hobbies and skills.</string>
    <string name="hobbies">Hobbies</string>
    <string name="skills">Skills</string>
    <string name="sliderDesc3">A hobby is any activity that is done during ones leisure time typically for pleasure and enjoyment.</string>
    <string name="sliderDesc2">A skill simply is proficiency or dexterity in any particular field acquired through training and experience. In this app, I will share with you the skills I have gained.</string>
    <string name="contentDescSketchHobby">Image for Sketching Hobby</string>
    <string name="contentDescCodingHobby">Image for Coding hobby.</string>
    <string name="contentDescReadingHobby">Image for Reading hobby.</string>
    <string name="age">Age : 19</string>
    <string name="gender">Gender : Male</string>
    <string name="address">Address : Thimi, Bhaktapur</string>
    <string name="DOB">Date of Birth : August 6, 2003</string>
    <string name="contentDescIconJava">Icon for Java.</string>
    <string name="contentDescIconPython">Icon for Python.</string>
    <string name="contentDescIconSQL">Icon for SQL.</string>
    <string name="contentDescIconTeamwork">Icon for Teamwork.</string>
    <string name="contentDescIconProbSolving">Icon for Problem Solving.</string>
</resources>